--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,22 +1,122 @@
+<!--A Design by W3layouts
+   Author: W3layout
+   Author URL: http://w3layouts.com
+   -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Prueba</title>
-    <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
-    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet"  href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="js/paint.js"></script>
-</head>
-<body onload="paint.init()">
+<html lang="zxx">
+   <head>
+      <title>PinturECI - ARSW</title>
+      <!--meta tags -->
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="keywords" content="Proyecto final desarrollado para la materia ARSW en la Escuela Colombiana de Ingenieria" />
+      <script>
+         addEventListener("load", function () {
+         	setTimeout(hideURLbar, 0);
+         }, false);
+         
+         function hideURLbar() {
+         	window.scrollTo(0, 1);
+         }
+      </script>
+      <!--//meta tags ends here-->
+      <!--booststrap-->
+      <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+      <!--//booststrap end-->
+      <!-- font-awesome icons -->
+      <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css" media="all">
+      <!-- //font-awesome icons -->
+      <!-- Nav-CSS -->	
+      <link href="css/nav.css" rel="stylesheet" type="text/css" media="all" />
+
+      <!-- //Nav-CSS -->	
+      <!-- banner -->	
+      <link rel="stylesheet" type="text/css" href="css/uncover.css" />
+      <!--//banner -->	
+      <!--stylesheets-->
+      <link href="css/style.css" rel='stylesheet' type='text/css' media="all">
+      <!--//stylesheets-->
+      <link href="//fonts.googleapis.com/css?family=Cinzel+Decorative:400,700" rel="stylesheet">
+      <link href="//fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
+      <link href="//fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+      <script src="js/drawPrueba.js"> </script>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+   </head>
+   <body>
+      <div class="header-outs" id="home">
+         <div class="header-w3layouts">
+            <div class="container">
+               <div class="right-side">
+
+               </div>
+               <!-- open/close -->
+               <div class="overlay overlay-hugeinc">
+                  <button type="button" class="overlay-close">Close</button>
+                  <nav>
+                     <ul>
+                        <li><a href="index.html" >Home</a></li>
+                        <li><a href="about.html" >About</a></li>
+                        <li><a href="contact.html"  >Contact</a></li>
+                     </ul>
+                  </nav>
+               </div>
+
+               <!-- /open/close -->
+               <!-- /navigation section -->
+            </div>
+            <div class="clearfix"> </div>
+         </div>
+         <!--banner-->
+         <div class="slides text-center">
+            <div class="slide slide--current one-img ">
+               <div class="slider-up">
+                  <!--campo input nickname-->
+                  <h5>Ingrese su nickname:</h5>
+                  <input type="text" id="name" name="name" requiredminlength="4" maxlength="12" size="15">
+                  <div class="outs_more-buttn">
+                     <!-- <a type="button" onclick="drawPrueba.enter($('#name').val())" >Jugar Ahora</a> -->
+                     <button onclick="drawPrueba.enter($('#name').val())" > Jugar Ahora</button>
+                  </div>
+               </div>
+               <div class="slide__img">
+               </div>
+            </div>
+            <div class="slide two-img">
+               <div class="slider-up">
 
 
-<canvas id="myCanvas" width="300" height="300" style="border:1px solid #000000;"> </canvas>
+               </div>
+               <div class="slide__img "></div>
+            </div>
+            <div class="slide six-img">
+               <div class="slider-up">
 
+                  <h5>Dragon<span class="fab fa-d-and-d"></span >Hunt</h5>
+                  <div class="outs_more-buttn">
+                     <a href="contact.html">Book Now</a>
+                  </div>
+               </div>
+               <div class="slide__img "></div>
+            </div>
+            <div class="clearfix"></div>
+         </div>
 
-
-</body>
+         <div class="clearfix"></div>
+      </div>
+      <!--//banner-->
+      <!--Footer -->   
+      <footer class="py-2">
+         <div class="icons text-center py-md-3 pb-2">
+            <ul>
+               <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+               <li><a href="#"><span class="fas fa-envelope"></span></a></li>
+               <li><a href="#"><span class="fas fa-rss"></span></a></li>
+               <li><a href="#"><span class="fab fa-vk"></span></a></li>
+            </ul>
+         </div>
+         <div class="footer-below text-center">
+            <p>©2022 PinturECI. All Rights Reserved | Design by David Perez, Juan Espinosa, Nicolas Camacho </p>
+         </div>
+      </footer>
+   </body>
 </html>
