--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,9 @@
-<!--A Design by W3layouts
-   Author: W3layout
-   Author URL: http://w3layouts.com
-   -->
+
 <!DOCTYPE html>
 <html lang="zxx">
    <head>
       <title>PinturECI - ARSW</title>
-      <!--meta tags -->
+
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="keywords" content="Proyecto final desarrollado para la materia ARSW en la Escuela Colombiana de Ingenieria" />
@@ -19,23 +16,12 @@
          	window.scrollTo(0, 1);
          }
       </script>
-      <!--//meta tags ends here-->
-      <!--booststrap-->
-      <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
-      <!--//booststrap end-->
-      <!-- font-awesome icons -->
-      <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css" media="all">
-      <!-- //font-awesome icons -->
-      <!-- Nav-CSS -->	
-      <link href="css/nav.css" rel="stylesheet" type="text/css" media="all" />
 
-      <!-- //Nav-CSS -->	
-      <!-- banner -->	
+      <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+      <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css" media="all">
+      <link href="css/nav.css" rel="stylesheet" type="text/css" media="all" />
       <link rel="stylesheet" type="text/css" href="css/uncover.css" />
-      <!--//banner -->	
-      <!--stylesheets-->
       <link href="css/style.css" rel='stylesheet' type='text/css' media="all">
-      <!--//stylesheets-->
       <link href="//fonts.googleapis.com/css?family=Cinzel+Decorative:400,700" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
@@ -83,8 +69,6 @@
             </div>
             <div class="slide two-img">
                <div class="slider-up">
-
-
                </div>
                <div class="slide__img "></div>
             </div>
@@ -100,7 +84,6 @@
             </div>
             <div class="clearfix"></div>
          </div>
-
          <div class="clearfix"></div>
       </div>
       <!--//banner-->
@@ -108,7 +91,7 @@
       <footer class="py-2">
          <div class="icons text-center py-md-3 pb-2">
             <ul>
-               <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+               <li><a href="facebook.com"><span class="fab fa-facebook-f"></span></a></li>
                <li><a href="#"><span class="fas fa-envelope"></span></a></li>
                <li><a href="#"><span class="fas fa-rss"></span></a></li>
                <li><a href="#"><span class="fab fa-vk"></span></a></li>
