--- a/src/main/resources/static/lobby.html
+++ b/src/main/resources/static/lobby.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Lobby</title>
+    <script src="js/drawPrueba.js"></script>
+    <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
 
 
 </head>
 <body>
-
-Lobby
+<input id="name" type="text">
+<button onclick="drawPrueba.enter($('#name').val())">Prueba </button>
 
 </body>
 </html>
