--- a/src/main/resources/static/sala.html
+++ b/src/main/resources/static/sala.html
@@ -14,19 +14,27 @@
     <script src="js/drawPrueba.js"></script>
 </head>
 <body onload="paint.init()" class="fondo">
-<h3 class="">Sala de juego</h3>
-<h3 id="palabraDibujar"></h3>
-<input type="number" id="prueba" placeholder="Ingrese su id">
-<button onclick="paint.selectID($('#prueba').val())">Ingrese su id</button>
-<h6 id="pruebaID"></h6>
-<canvas id="myCanvas" width="600" height="600" style="border:10px solid blue ; "> </canvas>
-<br>
-<button class="btn btn-primary" onclick="paint.selectColor('blue')">Azul</button>
-<button type="button" class="btn btn-success" onclick="paint.selectColor('green')"> Verde </button>
-<button type="button" class="btn btn-danger" onclick="paint.selectColor('red')"> Rojo </button>
-<button type="button" class="btn btn-warning" onclick="paint.selectColor('yellow')"> Amarillo </button>
-<button type="button" class="btn btn-dark" onclick="paint.selectColor('black')"> Negro </button>
-<button type="button" class="btn btn-outline-warning" onclick="paint.clearCanvaSend()">Limpiar Tablero!</button>
+    <h3 class="">Sala de juego</h3>
+    <h3 id="palabraDibujar"></h3>
+    <input type="number" id="prueba" placeholder="Ingrese su id">
+    <button onclick="paint.selectID($('#prueba').val())">Ingrese su id</button>
+    <h6 id="pruebaID"></h6>
+    <canvas id="myCanvas" width="600" height="600" style="border:10px solid blue ; "> </canvas>
+    <br>
+    <button class="btn btn-primary" onclick="paint.selectColor('blue')">Azul</button>
+    <button type="button" class="btn btn-success" onclick="paint.selectColor('green')"> Verde </button>
+    <button type="button" class="btn btn-danger" onclick="paint.selectColor('red')"> Rojo </button>
+    <button type="button" class="btn btn-warning" onclick="paint.selectColor('yellow')"> Amarillo </button>
+    <button type="button" class="btn btn-dark" onclick="paint.selectColor('black')"> Negro </button>
+    <button type="button" class="btn btn-outline-warning" onclick="paint.clearCanvaSend()">Limpiar Tablero!</button>
+    <div id="chatSection">
+        <textarea id="chatbox" disabled></textarea>
+        <form name="message" action="">
+            <input name="usermsg" type="text" id="usermsg" />
+            <button type="button" class="btn btn-outline-primary" id="submitmsg" onclick="paint.message($('#usermsg').val())">Send</button>
+        </form>
+    </div>
+
 
 
 </body>
