--- a/src/main/resources/static/lobby.html
+++ b/src/main/resources/static/lobby.html
@@ -6,6 +6,9 @@
     <script src="js/drawPrueba.js"></script>
     <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
     <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/apiClient.js"></script>
+
 
 
 
@@ -13,7 +16,8 @@
 </head>
 <body>
 <input id="name" type="text">
-<button onclick="drawPrueba.enter($('#name').val())">Prueba </button>
+<input id = "id" type = "number">
+<button onclick="app.saveUser($('#name').val(), $('#id').val())">Prueba </button>
 
 </body>
 </html>
