--- a/src/main/resources/static/sala.html
+++ b/src/main/resources/static/sala.html
@@ -20,7 +20,7 @@
     <input type="number" id="prueba" placeholder="Ingrese su id">
     <button onclick="paint.selectID($('#prueba').val())">Ingrese su id</button>
     <h6 id="pruebaID"></h6>
-    <canvas id="myCanvas" width="600" height="600" style="border:10px solid blue ; "> </canvas>
+    <canvas id="myCanvas" width="600" height="600" > </canvas>
     <br>
     <button class="btn btn-primary" onclick="paint.selectColor('blue')">Azul</button>
     <button type="button" class="btn btn-success" onclick="paint.selectColor('green')"> Verde </button>
