--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,12 +20,13 @@
       <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
       <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css" media="all">
       <link href="css/nav.css" rel="stylesheet" type="text/css" media="all" />
-      <link rel="stylesheet" type="text/css" href="css/uncover.css" />
       <link href="css/style.css" rel='stylesheet' type='text/css' media="all">
       <link href="//fonts.googleapis.com/css?family=Cinzel+Decorative:400,700" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
-      <script src="js/drawPrueba.js"> </script>
+      <script src="js/paint.js"> </script>
+      <script src="js/app.js"> </script>
+      <script src="js/apiClient.js"> </script>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
    </head>
    <body>
@@ -59,9 +60,10 @@
                   <!--campo input nickname-->
                   <h5>Ingrese su nickname:</h5>
                   <input type="text" id="name" name="name" requiredminlength="4" maxlength="12" size="15">
+                  <input type="number" id="id"  maxlength="12" size="15" >
                   <div class="outs_more-buttn">
                      <!-- <a type="button" onclick="drawPrueba.enter($('#name').val())" >Jugar Ahora</a> -->
-                     <button onclick="drawPrueba.enter($('#name').val())" > Jugar Ahora</button>
+                     <button onclick="app.saveUser($('#name').val(), $('#id').val())"> Jugar Ahora</button>
                   </div>
                </div>
                <div class="slide__img">
